@@ -1,64 +1,65 @@
 package com.sofka.davs.socialMediaBack.service;
 
 import com.sofka.davs.socialMediaBack.dto.CustomMapper;
-import com.sofka.davs.socialMediaBack.dto.PostDto;
+import com.sofka.davs.socialMediaBack.dto.PostDTO;
 import com.sofka.davs.socialMediaBack.entity.Post;
+import com.sofka.davs.socialMediaBack.repository.CommentRepository;
 import com.sofka.davs.socialMediaBack.repository.PostRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-
-import static jdk.dynalink.linker.support.Guards.isNull;
+import java.util.stream.Collectors;
 
 @Service
 public class PostServicempl implements PostService{
 
     @Autowired
     private CustomMapper mapper;
-
     @Autowired
     private PostRepository postRepository;
 
+    @Autowired
+    private CommentRepository commentRepository;
+
+    @Autowired
+    private UserLikeService userLikeService;
+
+    @Autowired
+    private CommentService commentService;
+
     @Override
-    public PostDto createPost(PostDto postDto) {
-        return mapper
-                .fromEntityToPostDto(postRepository
-                        .save(mapper.fromPostDtoToEntity(postDto)));
+    public PostDTO createPost(PostDTO postDto) {
+        Post post = mapper.dtoMapper(postDto);
+        return mapper.convertPostToDto(postRepository.save(post));
     }
 
     @Override
-    public List<PostDto> findAllPost() {
-        var posts = postRepository.findAll();
-        var postDtos = posts.stream().map(post -> mapper.fromEntityToPostDto(post)).toList();
-        return postDtos;
+    public List<PostDTO> findAllPost() {
+        return postRepository.findAll()
+                .stream()
+                .map(mapper::convertPostToDto)
+                .collect(Collectors.toList());
     }
 
     @Override
-        public PostDto getById(Integer id) {
-        Post post = postRepository.findById(id).get();
-        if(post.getId() == null){
-            new RuntimeException();
+    public PostDTO updatePost(PostDTO postDto) {
+        Optional post = postRepository.findById(postDto.getId());
+        if(post.isPresent()){
+            var postEdited = postRepository.save(mapper.dtoMapper(postDto));
+            var postEditedDTO = mapper.convertPostToDto(postEdited);
+            return postEditedDTO;
         }
-        PostDto postDto = mapper.fromEntityToPostDto(post);
-        return postDto;
-    }
-
-    @Override
-    public PostDto updatePost(PostDto postDto) {
-        var oldPost = postRepository.findById(postDto.getId());
-        if (oldPost.isPresent()) {
-            var updatedPost = mapper.updateExistingPost(oldPost.get(), postDto);
-            var savedPost = postRepository.save(oldPost.get());
-            return mapper.fromEntityToPostDto(savedPost);
-        }
-        throw new IllegalStateException("ERROR the post doesn't exist");
+        throw new IllegalStateException("The post doesn't exists");
     }
 
     @Override
     public void deletePost(Integer id) {
-            PostDto postDto = getById(id);
-            postRepository.deleteById(postDto.getId());
+        Post post = postRepository.findById(id).get();
+//        if (post.getComments().size()>=0){
+//            post.getComments().forEach(comment -> commentRepository.deleteById(comment.getId()));
+//        }
+        postRepository.deleteById(id);
     }
 }
